--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<input class="color2" type="color" name="color2" value="#ff0000">
 	<h2>Current CSS Background</h2>
 	<h3></h3>
-	<button class="myButton"> Random </button>
+	<button class="random"> Random </button>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
